--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">pm26sproject2</string>
+    <string name="app_name">Physical Activity Social Network</string>
     <string name="your_web_client_id">1000142022891-dbsr13i8sfb88cc54b9u5ot7mu3ab4nf.apps.googleusercontent.com</string>
     <string name="title_activity_group">GroupActivity</string>
     <string name="tab_text_1">Tab 1</string>
